<!--
  ~ Copyright 2019 Deepank Mehta. All rights reserved.
  ~ Licensed under the Apache License, Version 2.0 (the “License”);
  ~ You may not use this file; except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~ Unless required by applicable law or agreed to in writing, software
  ~ Distributed under the License is distributed on an “AS IS” BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ Limitations under the License.
  ~
  -->

<resources>
    <string name="app_name">PopularMovies</string>
    <string name="error_message">Failed to fetch results, please try again</string>
    <string name="refresh">Refresh</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="now_playing">Now Playing</string>
    <string name="upcoming">Upcoming</string>
    <string name="release_date">Release Date :</string>
    <string name="avg_vote">Average Votes :</string>
    <string name="overview">Overview :</string>
</resources>
