<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2019 Deepank Mehta. All rights reserved.
  ~ Licensed under the Apache License, Version 2.0 (the “License”);
  ~ You may not use this file; except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~ Unless required by applicable law or agreed to in writing, software
  ~ Distributed under the License is distributed on an “AS IS” BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ Limitations under the License.
  ~
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/refresh"
        app:showAsAction="always"
        android:icon="@drawable/refresh_white"
        android:title="@string/refresh"/>

    <item
        android:id="@+id/popular"
        android:orderInCategory="1"
        android:title="@string/popular"
        app:showAsAction="never" />

    <item
        android:id="@+id/top_rated"
        android:orderInCategory="2"
        android:title="@string/top_rated"
        app:showAsAction="never" />

    <item
        android:id="@+id/now_playing"
        android:orderInCategory="3"
        android:title="@string/now_playing"
        app:showAsAction="never" />

    <item
        android:id="@+id/upcoming"
        android:orderInCategory="4"
        android:title="@string/upcoming"
        app:showAsAction="never" />

</menu>