<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2019 Deepank Mehta. All rights reserved.
  ~ Licensed under the Apache License, Version 2.0 (the “License”);
  ~ You may not use this file; except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~ Unless required by applicable law or agreed to in writing, software
  ~ Distributed under the License is distributed on an “AS IS” BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ Limitations under the License.
  ~
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsActivity"
    android:background="@color/colorBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/poster"
                android:layout_width="150dp"
                android:layout_height="234dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title"
                    android:textColor="@color/colorText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    tools:text="Title" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:textColor="@color/colorText"
                    android:layout_marginBottom="8dp"
                    android:text="@string/release_date"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/release_date"
                    android:layout_width="wrap_content"
                    android:textColor="@color/colorText"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginBottom="8dp"
                    android:textSize="16sp"
                    tools:text="1st January 2019" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:textColor="@color/colorText"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/avg_vote"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:textSize="16sp"
                    android:textColor="@color/colorText"
                    tools:text="8.6" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/overview"
            android:textColor="@color/colorText"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/overview"
            android:textColor="@color/colorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textSize="16sp"
            tools:text="Overview of the movie to be displayed here" />

    </LinearLayout>

</ScrollView>